DevOps-Project-1/security/network-policy-example.yaml
# network-policy-example.yaml
#
# Restricts network traffic for mini-finance-app
# Default deny all ingress, then allow only ArgoCD

# ====== DEV NAMESPACE ======
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mini-finance-deny-all
  namespace: mini-finance-dev
spec:
  podSelector:
    matchLabels:
      app: mini-finance-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-argocd-to-mini-finance
  namespace: mini-finance-dev
spec:
  podSelector:
    matchLabels:
      app: mini-finance-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: argocd
    ports:
    - protocol: TCP
      port: 80
---
# ====== PROD NAMESPACE ======
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mini-finance-deny-all
  namespace: mini-finance-prod
spec:
  podSelector:
    matchLabels:
      app: mini-finance-app
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-argocd-to-mini-finance
  namespace: mini-finance-prod
spec:
  podSelector:
    matchLabels:
      app: mini-finance-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: argocd
    ports:
    - protocol: TCP
      port: 80
